R1 - Entertainment - Minor fix on mobile compatibility

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,8 @@
 	width: 100%;
 }
 
-/* The max-width here is the current maximum width of the browser*/
-@media (max-width: 420px) {
+/* The max-width here is the **current** maximum width of the browser */
+@media (max-width: 430px) {
 	.hide-on-mobile {
 		display: none !important;
 	}
